[package]
name = "mem"
version = "0.1.0"
authors = ["Steele Scott <steele@steele.gg>"]
edition = "2018"
homepage = "https://steele.gg"
readme = "README.md"
description = "A utility library for hacking/reading memory of processes/games."

[dependencies]
anyhow = "1.0.40"
bindings = { path = "bindings" }
windows = { git = "https://github.com/microsoft/windows-rs" }

[features]
external = []
internal = []
injector = []

[[example]]
name = "external"
required-features = ["external"]

[[example]]
name = "internal"
required-features = ["internal"]