[package]
name = "mem"
version = "0.1.0"
authors = ["Steele Scott <steele@steele.gg>"]
edition = "2018"
readme = "README.md"
description = "A utility library for hacking/reading memory of processes/games."

[dependencies]
thiserror = "1.0.25"
bindings = { path = "bindings" }
windows = { git = "https://github.com/microsoft/windows-rs" }

[features]
external = []
internal = []
injector = []

[[example]]
name = "external"
path = "examples/external.rs"
required-features = ["external"]