[package]
name = "bindings"
version = "0.1.0"
authors = ["Steele Scott <steele@steele.gg>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { git = "https://github.com/microsoft/windows-rs" }

[build-dependencies]
windows = { git = "https://github.com/microsoft/windows-rs" }