[package]
name = "marauder-macros"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/steele123/mem-rs"
categories = ["games"]
description = "A macro for generating DLLs for memory hacking"
license = "MIT"
keywords = ["memory", "cheat", "hack", "dll", "injection"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.75", features = ["full"] }
quote = "1.0.9"
proc-macro2 = "1.0.29"