[package]
name = "mem"
version = "0.1.0"
authors = ["Steele Scott <scott.2675@buckeyemail.osu.edu>", "Tyler Hill <tyler@oxide.fi>"]
edition = "2018"
readme = "README.md"
description = "A utility library for hacking/reading memory of processes/games."

[dependencies]
mem-macros = { path = "../mem-macros", optional = true }
thiserror = "1.0.30"

[dependencies.windows]
version = "0.29.0"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console",
    "Win32_Graphics_Direct3D9",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Direct3D10",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D12",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_Input_KeyboardAndMouse"
]

[dev-dependencies]
tokio = { version = "1.15.0", features = ["full"] }

[features]
default = ["full"]
full = ["external", "internal", "injector", "macros"]
external = []
internal = []
injector = []
d3d9 = []
d3d10 = []
d3d11 = []
d3d12 = []
opengl = []
vulkan = []
macros = ["mem-macros"]

[[example]]
name = "tokio_dll"
path = "../examples/tokio_dll.rs"
crate-type = ["cdylib"]
required-features = ["macros"]

[[example]]
name = "sample_dll"
path = "../examples/sample_dll.rs"
crate-type = ["cdylib"]

[[example]]
name = "macro_dll"
path = "../examples/macro_dll.rs"
required-features = ["macros"]
crate-type = ["cdylib"]

[[example]]
name = "injector"
path = "../examples/injector.rs"
required-features = ["injector"]

[[example]]
name = "target_process"
path = "../examples/target_process.rs"
