[package]
name = "bindings"
version = "0.1.0"
publish = false
authors = ["Steele Scott <scott.2675@buckeyemail.osu.edu>", "Tyler Hill <tyler@oxide.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = "0.14.0"

[build-dependencies]
windows = "0.14.0"
